feat(steps): Add layout, style and dummy content
fix: top border color in dark more
fix: intro darkmode style

--- a/src/index.html
+++ b/src/index.html
@@ -168,7 +168,7 @@ eleventyNavigation:
                     </button>
                     <p class="item-p">
                         My work often involves building machine learning systems
-                        grounded in physical laws, using physics-informed neural
+                        grounded in physical laws, using physiinformed neural
                         nets and modeling-heavy data. I speak data — from
                         sensors to structure.
                     </p>
@@ -275,6 +275,48 @@ eleventyNavigation:
             {%- endfor -%} {% else %}
             <p class="error">Something went wrong, no blog found.</p>
             {% endif %}
+        </ul>
+    </div>
+</section>
+
+<section id="steps">
+    <div class="container">
+        <div class="content">
+            <span class="topper">How I Work</span>
+            <h2 class="title">How I Work</h2>
+            <p class="text">
+                I work best when blending technical precision with practical outcomes. Whether it's a geospatial model, an AI prototype, or a data pipeline for compliance — my approach is always grounded, iterative, and transparent.
+            </p>
+        </div>
+        <ul class="card-group">
+            <li class="item">
+                <span class="number">01</span>
+                <h3 class="h3">Understand the Problem</h3>
+                <p class="item-text">
+                    I dive into your real-world goals first — not just the data. That means working with domain experts, CFOs, or researchers to align on outcomes.
+                </p>
+            </li>
+            <li class="item">
+                <span class="number">02</span>
+                <h3 class="h3">Design the Right System</h3>
+                <p class="item-text">
+                    From automation workflows to deep learning pipelines, I choose tools and models that match the complexity, scale, and constraints of your use case.
+                </p>
+            </li>
+            <li class="item">
+                <span class="number">03</span>
+                <h3 class="h3">Build & Iterate</h3>
+                <p class="item-text">
+                    I build in short, testable iterations — with frequent check-ins, clear docs, and deployable code. Every solution is engineered to be maintainable and reproducible.
+                </p>
+            </li>
+            <li class="item">
+                <span class="number">04</span>
+                <h3 class="h3">Deliver, Document, Support</h3>
+                <p class="item-text">
+                    From launch to handover, I make sure systems are clearly explained and easy to adopt. I'm available for ongoing support or integration into your stack.
+                </p>
+            </li>
         </ul>
     </div>
 </section>
