feat(content): Step section

--- a/src/index.html
+++ b/src/index.html
@@ -1,15 +1,12 @@
 ---
-title: "Alan Huynh | AI & Geospatial Engineer in Melbourne"
-description: "Melbourne-based AI and Geospatial Engineer specializing in climate tech and computer vision projects."
-
-permalink: "/"
-tags: "sitemap" # Sitemap will use all pages in content/, due to content.json. As index.html is not included in content/ we need to manually add the sitemap tag to this page (only).
-eleventyNavigation:
-    key: Home
-    order: 100
+title: "Alan Huynh | AI Agent & ML Systems Engineer in Melbourne"
+description: "Melbourne-based AI engineer building automation systems, intelligent agents, and geospatial tools for climate and compliance use cases."
 ---
 
-{% extends "layouts/base.html" %} {% block head %}
+permalink: "/" tags: "sitemap" # Sitemap will use all pages in content/, due to
+content.json. As index.html is not included in content/ we need to manually add
+the sitemap tag to this page (only). eleventyNavigation: key: Home order: 100
+--- {% extends "layouts/base.html" %} {% block head %}
 <link rel="stylesheet" href="/assets/css/local.css" />
 <link rel="stylesheet" href="/assets/css/critical.css" />
 
@@ -282,39 +279,49 @@ eleventyNavigation:
 <section id="steps">
     <div class="container">
         <div class="content">
-            <span class="topper">How I Work</span>
+            <span class="topper">Process</span>
             <h2 class="title">How I Work</h2>
             <p class="text">
-                I work best when blending technical precision with practical outcomes. Whether it's a geospatial model, an AI prototype, or a data pipeline for compliance — my approach is always grounded, iterative, and transparent.
+                I like building useful things. Most of the work starts with
+                data, but the goal is always a system that solves something real
+                for business, climate, or just making life easier.
             </p>
         </div>
         <ul class="card-group">
             <li class="item">
                 <span class="number">01</span>
-                <h3 class="h3">Understand the Problem</h3>
+                <h3 class="h3">Discovery</h3>
                 <p class="item-text">
-                    I dive into your real-world goals first — not just the data. That means working with domain experts, CFOs, or researchers to align on outcomes.
+                    First step is to figure out what the system really has to
+                    do, and why; and talk to whoever knows the domain best, not
+                    just staring at the data.
                 </p>
             </li>
             <li class="item">
                 <span class="number">02</span>
-                <h3 class="h3">Design the Right System</h3>
+                <h3 class="h3">Design</h3>
                 <p class="item-text">
-                    From automation workflows to deep learning pipelines, I choose tools and models that match the complexity, scale, and constraints of your use case.
+                    Next is to sketch out a system that fits, technically and
+                    practically. No matter if it’s automation or data workflows,
+                    I choose tools based on fit - I'm too old for trends :) .
                 </p>
             </li>
             <li class="item">
                 <span class="number">03</span>
                 <h3 class="h3">Build & Iterate</h3>
                 <p class="item-text">
-                    I build in short, testable iterations — with frequent check-ins, clear docs, and deployable code. Every solution is engineered to be maintainable and reproducible.
+                    I build in steps. Each part must be tested, with room to
+                    change direction. I keep things clean and share progress
+                    early and often.
                 </p>
             </li>
             <li class="item">
                 <span class="number">04</span>
-                <h3 class="h3">Deliver, Document, Support</h3>
+                <h3 class="h3">Deliver & Support</h3>
                 <p class="item-text">
-                    From launch to handover, I make sure systems are clearly explained and easy to adopt. I'm available for ongoing support or integration into your stack.
+                    I write things down and keep handovers simple. If you need
+                    support later — fixing bugs, adding features, I'll stick
+                    around.
                 </p>
             </li>
         </ul>
@@ -363,6 +370,4 @@ eleventyNavigation:
     </picture>
 </section>
 
-{% include "components/contact.html" %}
-
-{% endblock %}
+{% include "components/contact.html" %} {% endblock %}
