feat(content) : intro

--- a/src/index.html
+++ b/src/index.html
@@ -92,10 +92,10 @@ the sitemap tag to this page (only). eleventyNavigation: key: Home order: 100
             <span class="topper">What I do</span>
             <h2 class="title">AI Systems for Data, Compliance, and Climate</h2>
             <p class="text">
-                I work at the intersection of machine learning, automation, and
-                environmental intelligence. My focus is on building real-world
-                systems that turn data into insight — whether for ESG reporting,
-                geospatial analysis, or deep learning research.
+                I build systems that help people make sense of data. That
+                usually means machine learning, automation, or working with
+                spatial and environmental info. I focus on tools that get used
+                and not just models that sit in notebooks.
             </p>
             <ul class="faq-group">
                 <li class="faq-item active">
@@ -111,15 +111,15 @@ the sitemap tag to this page (only). eleventyNavigation: key: Home order: 100
                             height="32"
                         />
                         <span class="button-text">
-                            Applied Machine Learning Systems
+                            End-to-End ML & Automation Workflows
                         </span>
                         <span class="indicator" aria-hidden="true"></span>
                     </button>
                     <p class="item-p">
-                        I build end-to-end ML workflows — from experimentation
-                        to deployment — with automation in mind. Tools include
-                        PyTorch, FastAPI, HuggingFace, and vector databases.
-                        Ideal for productizing R&D and enabling AI agents.
+                        I design and build ML systems from first prototype to
+                        production, including data pipelines, APIs, and
+                        automation. I can work with PyTorch, APIs, and Ops, etc.
+                        to make AI stuffs actually usable.
                     </p>
                 </li>
                 <li class="faq-item">
@@ -134,16 +134,14 @@ the sitemap tag to this page (only). eleventyNavigation: key: Home order: 100
                             width="32"
                             height="32"
                         />
-                        <span class="button-text">
-                            Geospatial & Environmental Intelligence
-                        </span>
+                        <span class="button-text"> Climate & ESG Tools </span>
                         <span class="indicator" aria-hidden="true"></span>
                     </button>
                     <p class="item-p">
-                        I develop tools that process and analyze climate,
-                        satellite, and compliance data — from spatial pipelines
-                        to computer vision-based monitoring. Perfect for Scope 3
-                        analysis and ESG insights.
+                        I worked on systems that track, monitor, model, or
+                        report on climate data, often using spatial pipelines or
+                        computer vision. That includes tools for Scope 3, ESG,
+                        or compliance cases.
                     </p>
                 </li>
                 <li class="faq-item">
@@ -159,15 +157,15 @@ the sitemap tag to this page (only). eleventyNavigation: key: Home order: 100
                             height="32"
                         />
                         <span class="button-text">
-                            Data-Centric AI & Scientific Modeling
+                            Modeling with Sensors & Scientific Data
                         </span>
                         <span class="indicator" aria-hidden="true"></span>
                     </button>
                     <p class="item-p">
-                        My work often involves building machine learning systems
-                        grounded in physical laws, using physiinformed neural
-                        nets and modeling-heavy data. I speak data — from
-                        sensors to structure.
+                        Some of my work blends physics, environmental signals,
+                        and machine learning, especially when the data is messy
+                        or tied to physical systems. I've used physics-informed
+                        networks and custom data pipelines etc..
                     </p>
                 </li>
                 <li class="faq-item">
@@ -183,18 +181,19 @@ the sitemap tag to this page (only). eleventyNavigation: key: Home order: 100
                             height="32"
                         />
                         <span class="button-text">
-                            Prototyping with Hardware + Vision
+                            Hardware & Computer Vision
                         </span>
                         <span class="indicator" aria-hidden="true"></span>
                     </button>
                     <p class="item-p">
-                        From high-altitude balloons to vision-based monitoring,
-                        I build prototypes that connect physical systems to AI
-                        backends. Bridging hardware, firmware, and CV logic.
+                        I’ve worked with embedded systems, high-alt balloons,
+                        and vision-based monitors. I build quick prototypes that
+                        connect sensors, firmware, and ML logic, good for
+                        testing real-world ideas fast.
                     </p>
                 </li>
             </ul>
-            <a href="" class="button-solid">More About Me</a>
+            <a href="/about" class="button-solid">More About Me</a>
         </div>
     </div>
 </section>
