change contact-inline to contact

--- a/src/index.html
+++ b/src/index.html
@@ -324,6 +324,9 @@ the sitemap tag to this page (only). eleventyNavigation: key: Home order: 100
                 </p>
             </li>
         </ul>
+        <a href="#contact" class="button-solid" style="align-self: center"
+            >Have a project in mind? Let's talk</a
+        >
     </div>
 </section>
 
