feat(about): Add dedicate about page and gallery in landing

--- a/src/index.html
+++ b/src/index.html
@@ -164,7 +164,7 @@ the sitemap tag to this page (only). eleventyNavigation: key: Home order: 100
                     <p class="item-p">
                         Some of my work blends physics, environmental signals,
                         and machine learning, especially when the data is messy
-                        or tied to physical systems. I've used physics-informed
+                        or tied to physical systems. I've used physiinformed
                         networks and custom data pipelines etc..
                     </p>
                 </li>
@@ -194,6 +194,83 @@ the sitemap tag to this page (only). eleventyNavigation: key: Home order: 100
                 </li>
             </ul>
             <a href="/about" class="button-solid">More About Me</a>
+        </div>
+    </div>
+</section>
+
+<!-- ============================================ -->
+<!--                  Gallery                     -->
+<!-- ============================================ -->
+
+<section id="gallery">
+    <div class="container">
+        <div class="content">
+            <div class="flex">
+                <span class="topper">About Me</span>
+                <h2 class="title">A Few Things <br />I’ve Been Up To</h2>
+            </div>
+            <div class="flex">
+                <p class="text">
+                    A few glimpses into what I’ve done — projects, events, a
+                    hackathon win, and some talks. Mostly work, some fun, and a
+                    few things that aren't productive at all :D
+                </p>
+                <a aria-label="view more pictures" href="/about" class="button">
+                    More About Me
+                </a>
+            </div>
+        </div>
+        <div class="image-group">
+            <picture class="picture picture-1">
+                <img
+                    src="/assets/images/meetup.jpg"
+                    alt="meetup"
+                    width="605"
+                    height="690"
+                />
+            </picture>
+            <picture class="picture picture-2">
+                <img
+                    src="/assets/images/compli.jpg"
+                    alt="complications"
+                    width="605"
+                    height="690"
+                />
+            </picture>
+            <picture class="picture picture-3">
+                <iframe
+                    src="https://www.youtube.com/embed/LDpGDlyv8W0"
+                    title="YouTube video player"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    referrerpolicy="strict-origin-when-cross-origin"
+                    allowfullscreen
+                ></iframe>
+            </picture>
+            <picture class="picture picture-4">
+                <img
+                    src="/assets/images/hackathon.jpeg"
+                    alt="hackathon"
+                    width="605"
+                    height="690"
+                />
+            </picture>
+            <picture class="picture picture-5">
+                <img
+                    src="/assets/images/hike.jpg"
+                    alt="hike"
+                    width="605"
+                    height="690"
+                />
+            </picture>
+            <picture class="picture picture-6">
+                <img
+                    src="/assets/images/gears.jpg"
+                    alt="gears"
+                    width="605"
+                    height="690"
+                />
+            </picture>
         </div>
     </div>
 </section>
