feat: Add about and contact to nav
- Update resume

--- a/src/index.html
+++ b/src/index.html
@@ -64,7 +64,7 @@ the sitemap tag to this page (only). eleventyNavigation: key: Home order: 100
                 </a>
             </div>
             <a
-                href="/assets/images/blog/alan-huynh-resume.pdf"
+                href="/assets/images/resume.pdf"
                 target="_blank"
                 rel="noopener noreferrer"
                 class="button-solid"
